--- a/index.html
+++ b/index.html
@@ -5,16 +5,7 @@
   <meta charset="ASCII">
   <script type="text/javascript" src="app.js"></script>
   <meta name="robots" content="noimageindex, nofollow, nosnippet">
-  <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
-    crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/big.js/2.3.0/big.js"
-    integrity="sha512-Ks3yCjHK35UDCp8IinA57ilvp74EgCcFFO1SytfAb8ifDLjx9kR6WuQ3pB6T37Ez2B162adQc9nBMpFNSfjMZA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/big.js/2.3.0/big.js"
-    integrity="sha512-Ks3yCjHK35UDCp8IinA57ilvp74EgCcFFO1SytfAb8ifDLjx9kR6WuQ3pB6T37Ez2B162adQc9nBMpFNSfjMZA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </head>
 
 <body>
@@ -41,7 +32,7 @@
     <main>
       <section class="home">
         <div class="avatar">
-          <img src="images/avatar.jpg" />
+          <img src="images/avatar.webp" />
         </div>
         <div class="content">
           <h6>Who is Justice Beaver?</h6>
@@ -112,7 +103,7 @@
       </section>
       <section class="about">
         <div class="large-image">
-          <img src="images/avatar-2.jpg" />
+          <img src="images/avatar-2.webp" />
         </div>
         <div class="content">
           <h6>Assistant <span>(to the)</span> Regional Manager</h6>
@@ -128,10 +119,10 @@
       <section class="portfolio">
         <h6>Portfolio</h6>
         <div class="photos">
-          <img src="images/portfolio-1.jpg" />
-          <img src="images/portfolio-2.jpg" />
-          <img src="images/portfolio-3.jpg" />
-          <img src="images/portfolio-4.jpg" />
+          <img src="images/portfolio-1.webp" />
+          <img src="images/portfolio-2.webp" />
+          <img src="images/portfolio-3.webp" />
+          <img src="images/portfolio-4.webp" />
         </div>
       </section>
       <section class="contact">
@@ -150,19 +141,19 @@
           <button>Send Message</button>
         </form>
       </section>
-      <img src="images/avatar.jpg" style="display: none;" />
-      <img src="images/avatar.jpg" style="display: none;" />
-      <img src="images/avatar.jpg" style="display: none;" />
-      <img src="images/avatar.jpg" style="display: none;" />
-      <img src="images/avatar.jpg" style="display: none;" />
-      <img src="images/avatar.jpg" style="display: none;" />
-      <img src="images/avatar.jpg" style="display: none;" />
-      <img src="images/avatar.jpg" style="display: none;" />
-      <img src="images/avatar.jpg" style="display: none;" />
-      <img src="images/avatar.jpg" style="display: none;" />
-      <img src="images/avatar.jpg" style="display: none;" />
-      <img src="images/avatar.jpg" style="display: none;" />
-      <img src="images/avatar.jpg" style="display: none;" />
+      <img src="images/avatar.webp" style="display: none;" />
+      <img src="images/avatar.webp" style="display: none;" />
+      <img src="images/avatar.webp" style="display: none;" />
+      <img src="images/avatar.webp" style="display: none;" />
+      <img src="images/avatar.webp" style="display: none;" />
+      <img src="images/avatar.webp" style="display: none;" />
+      <img src="images/avatar.webp" style="display: none;" />
+      <img src="images/avatar.webp" style="display: none;" />
+      <img src="images/avatar.webp" style="display: none;" />
+      <img src="images/avatar.webp" style="display: none;" />
+      <img src="images/avatar.webp" style="display: none;" />
+      <img src="images/avatar.webp" style="display: none;" />
+      <img src="images/avatar.webp" style="display: none;" />
     </main>
   </div>
   <link rel="stylesheet" type="text/css" href="app.css">
@@ -683,6 +674,17 @@
       }
     }
   </style>
+
+  <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/big.js/2.3.0/big.js"
+    integrity="sha512-Ks3yCjHK35UDCp8IinA57ilvp74EgCcFFO1SytfAb8ifDLjx9kR6WuQ3pB6T37Ez2B162adQc9nBMpFNSfjMZA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/big.js/2.3.0/big.js"
+    integrity="sha512-Ks3yCjHK35UDCp8IinA57ilvp74EgCcFFO1SytfAb8ifDLjx9kR6WuQ3pB6T37Ez2B162adQc9nBMpFNSfjMZA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 </html>
