--- a/index.html
+++ b/index.html
@@ -2,28 +2,25 @@
 
 <head>
   <title>Bill Buttlicker's portfolio</title>
-  <meta charset="ASCII">
+  <meta charset="utf-8">
   <script type="text/javascript" src="app.js"></script>
   <meta name="robots" content="noimageindex, nofollow, nosnippet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" type="text/css" href="app.css">
 
 </head>
 
 <body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/big.js/2.3.0/big.js"
-    integrity="sha512-Ks3yCjHK35UDCp8IinA57ilvp74EgCcFFO1SytfAb8ifDLjx9kR6WuQ3pB6T37Ez2B162adQc9nBMpFNSfjMZA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <style>
-    /** FONTS **/
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,900;1,400;1,900&display=swap');
-  </style>
+
+
   <div class="wrapper">
     <nav>
       <h1>Bill Buttlicker</h1>
       <ul>
-        <li><a href="#home" onClick="return false;" class="active">Home</a></li>
-        <li><a href="#about" onClick="return false;">About</a></li>
-        <li><a href="#portfolio" onClick="return false;">Portfolio</a></li>
-        <li><a href="#contact" onClick="return false;">Contact</a></li>
+        <li><a href="#home" class="active">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
 
       <p>&copy; 2022 Bill Buttlicker</p>
@@ -32,15 +29,15 @@
     <main>
       <section class="home">
         <div class="avatar">
-          <img src="images/avatar.webp" />
+          <img src="images/avatar.webp" alt="Dwight Schrewt" />
         </div>
         <div class="content">
           <h6>Who is Justice Beaver?</h6>
-          <p>Michael, I like the sound of your voice. You know what I’m going to do? I’m going to buy one million
+          <p>Michael, I like the sound of your voice. You know what I'm going to do? I'm going to buy one million
             dollars worth of paper products today.</p>
           <ul>
             <li>
-              <a href="https://twitter.com/karlhadwen" rel="noreferrer">
+              <a href="https://twitter.com/karlhadwen" rel="noreferrer" title="twitter link">
                 <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="512"
                   viewBox="0 0 24 24" width="512">
                   <path
@@ -50,7 +47,7 @@
               </a>
             </li>
             <li>
-              <a href="https://youtube.com/c/cognitivesurge" rel="noreferrer">
+              <a href="https://youtube.com/c/cognitivesurge" rel="noreferrer" title="youtube link">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                   viewBox="0 0 512 512" xml:space="preserve">
                   <path
@@ -60,7 +57,7 @@
               </a>
             </li>
             <li>
-              <a href="https://youtube.com/c/cognitivesurge" rel="noreferrer">
+              <a href="https://youtube.com/c/cognitivesurge" rel="noreferrer" title="youtube link">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512.00096 512.00096">
                   <path
                     d="m373.40625 0h-234.8125c-76.421875 0-138.59375 62.171875-138.59375 138.59375v234.816406c0 76.417969 62.171875 138.589844 138.59375 138.589844h234.816406c76.417969 0 138.589844-62.171875 138.589844-138.589844v-234.816406c0-76.421875-62.171875-138.59375-138.59375-138.59375zm-117.40625 395.996094c-77.195312 0-139.996094-62.800782-139.996094-139.996094s62.800782-139.996094 139.996094-139.996094 139.996094 62.800782 139.996094 139.996094-62.800782 139.996094-139.996094 139.996094zm143.34375-246.976563c-22.8125 0-41.367188-18.554687-41.367188-41.367187s18.554688-41.371094 41.367188-41.371094 41.371094 18.558594 41.371094 41.371094-18.558594 41.367187-41.371094 41.367187zm0 0">
@@ -75,7 +72,7 @@
               </a>
             </li>
             <li>
-              <a href="https://twitter.com/karlhadwen" rel="noreferrer">
+              <a href="https://twitter.com/karlhadwen" rel="noreferrer" title="twitter link">
                 <svg xmlns="http://www.w3.org/2000/svg" height="512pt" viewBox="0 0 512 512" width="512pt">
                   <path
                     d="m333.023438 279.15625c25.109374 63.527344 43.753906 128.929688 55.871093 195.746094 17.285157-10.539063 33.441407-23.203125 48.125-37.882813 38.140625-38.144531 62.753907-86.207031 71.449219-138.371093-37.46875-15.5-78.503906-24.078126-121.507812-24.078126-18.382813 0-36.398438 1.585938-53.9375 4.585938zm0 0">
@@ -103,7 +100,7 @@
       </section>
       <section class="about">
         <div class="large-image">
-          <img src="images/avatar-2.webp" />
+          <img src="images/avatar-2.webp" alt="TODO" />
         </div>
         <div class="content">
           <h6>Assistant <span>(to the)</span> Regional Manager</h6>
@@ -119,10 +116,10 @@
       <section class="portfolio">
         <h6>Portfolio</h6>
         <div class="photos">
-          <img src="images/portfolio-1.webp" />
-          <img src="images/portfolio-2.webp" />
-          <img src="images/portfolio-3.webp" />
-          <img src="images/portfolio-4.webp" />
+          <img src="images/portfolio-1.webp" alt="TODO" />
+          <img src="images/portfolio-2.webp" alt="TODO" />
+          <img src="images/portfolio-3.webp" alt="TODO" />
+          <img src="images/portfolio-4.webp" alt="TODO" />
         </div>
       </section>
       <section class="contact">
@@ -141,542 +138,24 @@
           <button>Send Message</button>
         </form>
       </section>
-      <img src="images/avatar.webp" style="display: none;" />
-      <img src="images/avatar.webp" style="display: none;" />
-      <img src="images/avatar.webp" style="display: none;" />
-      <img src="images/avatar.webp" style="display: none;" />
-      <img src="images/avatar.webp" style="display: none;" />
-      <img src="images/avatar.webp" style="display: none;" />
-      <img src="images/avatar.webp" style="display: none;" />
-      <img src="images/avatar.webp" style="display: none;" />
-      <img src="images/avatar.webp" style="display: none;" />
-      <img src="images/avatar.webp" style="display: none;" />
-      <img src="images/avatar.webp" style="display: none;" />
-      <img src="images/avatar.webp" style="display: none;" />
-      <img src="images/avatar.webp" style="display: none;" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
     </main>
   </div>
-  <link rel="stylesheet" type="text/css" href="app.css">
-  <style>
-    /* ==========================================================================
-                PORTFOLIO TEMPLATE BUILT BY KARL HADWEN (@karlhadwen)
 
-                "Whenever I'm about to do something, I think 'Would an idiot do that?' And if they would, I do not do that thing."
-                ========================================================================== */
 
-    /** RESET **/
-    html {
-      -webkit-box-sizing: border-box;
-      box-sizing: border-box;
-    }
 
-    *,
-    *:before,
-    *:after {
-      -webkit-box-sizing: inherit;
-      box-sizing: inherit;
-    }
-
-    html,
-    body,
-    div,
-    span,
-    applet,
-    object,
-    iframe,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p,
-    blockquote,
-    pre,
-    a,
-    abbr,
-    acronym,
-    address,
-    big,
-    cite,
-    code,
-    del,
-    dfn,
-    em,
-    img,
-    ins,
-    kbd,
-    q,
-    s,
-    samp,
-    small,
-    strike,
-    strong,
-    sub,
-    sup,
-    tt,
-    var,
-    b,
-    u,
-    i,
-    center,
-    dl,
-    dt,
-    dd,
-    ol,
-    ul,
-    li,
-    fieldset,
-    form,
-    label,
-    legend,
-    table,
-    caption,
-    tbody,
-    tfoot,
-    thead,
-    tr,
-    th,
-    td,
-    article,
-    nav,
-    canvas,
-    details,
-    embed,
-    figure,
-    figcaption,
-    footer,
-    header,
-    hgroup,
-    menu,
-    nav,
-    output,
-    ruby,
-    section,
-    summary,
-    time,
-    mark,
-    audio,
-    video {
-      margin: 0;
-      padding: 0;
-      border: 0;
-      font-size: 100%;
-      font: inherit;
-      vertical-align: baseline;
-    }
-
-    /* HTML5 display-role reset for older browsers */
-    article,
-    nav,
-    details,
-    figcaption,
-    figure,
-    footer,
-    header,
-    hgroup,
-    menu,
-    nav,
-    section {
-      display: block;
-    }
-
-    body {
-      line-height: 1;
-    }
-
-    ol,
-    ul {
-      list-style: none;
-    }
-
-    blockquote,
-    q {
-      quotes: none;
-    }
-
-    blockquote:before,
-    blockquote:after,
-    q:before,
-    q:after {
-      content: '';
-      content: none;
-    }
-
-    table {
-      border-collapse: collapse;
-      border-spacing: 0;
-    }
-
-    /** APP GLOBALS **/
-    body {
-      font-family: 'Poppins', sans-serif;
-      color: #ffffff;
-      font-smooth: always;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
-
-    p {
-      line-height: 32px;
-    }
-
-    a {
-      color: #313131;
-      text-decoration: none;
-    }
-
-    a.active {
-      font-weight: 700;
-      color: #f9da85;
-    }
-
-    .wrapper {
-      display: flex;
-      height: 100%;
-      min-height: 100%;
-    }
-
-    /** NAV **/
-    nav {
-      display: flex;
-      height: 100%;
-      flex-direction: column;
-      justify-content: center;
-      width: 100%;
-      max-width: 305px;
-      background-color: #000000;
-      padding: 16px 32px;
-    }
-
-    nav h1 {
-      color: #ffffff;
-      font-family: 'Poppins', sans-serif;
-      font-size: 28px;
-      font-weight: 900;
-      text-transform: uppercase;
-      margin-bottom: 32px;
-      line-height: 1.2;
-      transition: color .4s ease;
-    }
-
-    nav h1:hover {
-      color: #f9da85;
-    }
-
-    nav p {
-      color: #1e1e1e;
-      font-style: italic;
-      font-size: 14px;
-    }
-
-    nav a.author {
-      font-style: italic;
-      color: #999999c4;
-      font-size: 12px;
-    }
-
-    nav ul {
-      margin-bottom: 48px;
-    }
-
-    nav ul li {
-      margin-bottom: 16px;
-    }
-
-    nav ul li a {
-      font-size: 14px;
-      position: relative;
-    }
-
-    nav ul li a.active:before {
-      background-color: #f9da85;
-    }
-
-    nav ul li a:before {
-      content: "";
-      position: absolute;
-      width: 0;
-      height: 1px;
-      bottom: -3px;
-      left: 0;
-      background-color: #ffffff;
-      visibility: hidden;
-      transition: all 0.3s ease-in-out;
-    }
-
-    nav ul li a:hover:before {
-      visibility: visible;
-      width: 100%;
-    }
-
-    nav ul li:last-of-type {
-      margin-bottom: 0;
-    }
-
-    /** MAIN **/
-    main {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      flex: 1;
-    }
-
-    main section {
-      display: flex;
-      height: 100%;
-      max-width: 900px;
-      margin: auto;
-      flex-direction: column;
-      justify-content: center;
-      width: 100%;
-      padding: 32px 0;
-    }
-
-    main section h2 {
-      color: #000000;
-      font-family: 'Poppins', sans-serif;
-      font-size: 48px;
-      font-weight: 900;
-      text-transform: uppercase;
-      margin-bottom: 32px;
-    }
-
-    main section p {
-      color: #cfcdcd;
-      margin-bottom: 16px;
-    }
-
-    main section:not(.home) {
-      display: none;
-    }
-
-    main section img {
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-      animation: morph 8s ease-in-out infinite 1s;
-      background-blend-mode: multiply;
-      border: 10px solid #f9da85;
-      max-width: 90%;
-      height: auto;
-      border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    }
-
-    main section img:hover {
-      border: 10px solid #dadadabf;
-    }
-
-    /** MAIN: HOME **/
-    main section.home {
-      flex-direction: row;
-      align-items: center;
-    }
-
-    main section.home .avatar {
-      width: 100%;
-      margin-right: 64px;
-    }
-
-    main section.home .content ul {
-      display: flex;
-    }
-
-    main section.home .content ul li {
-      margin-right: 24px;
-    }
-
-    main section.home .content ul li:last-of-type {
-      margin-right: 0;
-    }
-
-    main section.home .content ul li svg {
-      width: 17px;
-      height: 17px;
-      transition: fill .4s ease;
-    }
-
-    main section.home .content ul li svg:hover {
-      fill: #f9da85;
-    }
-
-    main section.home .content p {
-      margin-bottom: 32px;
-    }
-
-    /** MAIN: ABOUT **/
-    main section.about .large-image {
-      margin-bottom: 64px;
-      display: flex;
-      justify-content: center;
-    }
-
-    main section.about h2 {
-      font-size: 40px;
-    }
-
-    main section.about h2 span {
-      font-style: italic;
-    }
-
-    main section.about img {
-      max-width: 70%;
-    }
-
-    main section.about p:last-of-type {
-      margin-bottom: 32px;
-    }
-
-    /** MAIN: PORTFOLIO **/
-    main section.portfolio {
-      flex-direction: column;
-      justify-content: center;
-    }
-
-    main section.portfolio img {
-      max-width: 70%;
-    }
-
-    main section.portfolio .photos {
-      display: grid;
-      grid-template-columns: auto auto;
-      grid-column-gap: 20px;
-      grid-row-gap: 20px;
-    }
-
-    /** MAIN: CONTACT **/
-    main section.contact .map {
-      margin-bottom: 16px;
-    }
-
-    main section.contact form {
-      display: flex;
-      flex-direction: column;
-    }
-
-    main section.contact p:first-of-type {
-      margin-bottom: 32px;
-    }
-
-    main section.contact input,
-    main section.contact textarea {
-      color: #383838;
-      width: 100%;
-      border: 1px solid rgba(0, 0, 0, .2);
-      background-color: transparent;
-      font-style: italic;
-      padding: 16px;
-      margin-bottom: 16px;
-      font-family: 'Poppins', sans-serif;
-    }
-
-    main section.contact textarea {
-      resize: none;
-    }
-
-    main section.contact button {
-      height: 64px;
-      width: 100%;
-      background-color: #f9da85;
-      font-family: 'Poppins', sans-serif;
-      font-weight: 900;
-      text-transform: uppercase;
-      font-size: 16px;
-      cursor: pointer;
-      border: 4px solid #ecca6b;
-      -webkit-transition: background-color 500ms linear;
-      -moz-transition: background-color 500ms linear;
-      -o-transition: background-color 500ms linear;
-      -ms-transition: background-color 500ms linear;
-      transition: background-color 500ms linear;
-    }
-
-    main section.contact button:hover {
-      background-color: #ffca3a;
-    }
-
-    /** ANIMATIONS **/
-    @keyframes morph {
-      0% {
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%
-      }
-
-      50% {
-        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%
-      }
-
-      100% {
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%
-      }
-    }
-
-    /** RESPONSIVE **/
-    @media (max-width: 1400px) {
-      .wrapper {
-        flex-direction: column;
-      }
-
-      nav {
-        max-width: none;
-        height: auto;
-        padding: 32px;
-      }
-
-      nav h1 {
-        margin-bottom: 16px;
-      }
-
-      nav ul {
-        display: flex;
-        margin-bottom: 0;
-      }
-
-      nav ul li {
-        margin-right: 16px;
-        margin-bottom: 0;
-      }
-
-      nav ul li:last-of-type {
-        margin-right: 0;
-      }
-
-      nav p,
-      nav>a {
-        display: none;
-      }
-
-      main section {
-        padding: 32px;
-      }
-
-      main section.home {
-        flex-direction: column;
-      }
-
-      main section.home .avatar {
-        margin-right: 0;
-        margin-bottom: 32px;
-        display: flex;
-        justify-content: center;
-      }
-
-      main section.home .content ul {
-        justify-content: center;
-      }
-    }
-
-    @media (max-width: 700px) {
-      main section.portfolio .photos {
-        display: inline-grid;
-        grid-template-columns: auto;
-        justify-items: center;
-        align-items: center;
-      }
-    }
-  </style>
-
-  <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
-    crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/big.js/2.3.0/big.js"
