--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-gb">
 
 <head>
   <title>Bill Buttlicker's portfolio</title>
@@ -7,6 +8,10 @@
   <meta name="robots" content="noimageindex, nofollow, nosnippet">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="app.css">
+  <meta name="description"
+    content="Dwight Schrewt is an entertainment producer and has worked on projects such as The Office, The Big Bang Theory, and Parks & Rec. Learn to create a portfolio page of your own using photos, videos, and more.">
+  <meta name="keywords" content="The office, portfolio, Dwight">
+  <meta name="author" content="Karl">
 
 </head>
 
@@ -24,15 +29,15 @@
       </ul>
 
       <p>&copy; 2022 Bill Buttlicker</p>
-      <a href="" rel="noreferrer" class="author">@karlhadwen</a>
+      <a href="#" rel="noreferrer" class="author">@karlhadwen</a>
     </nav>
     <main>
       <section class="home">
         <div class="avatar">
-          <img src="images/avatar.webp" alt="Dwight Schrewt" />
+          <img src="images/avatar.webp" alt="Dwight Schrewt" width="320" height="180" />
         </div>
         <div class="content">
-          <h6>Who is Justice Beaver?</h6>
+          <h2>Who is Justice Beaver?</h2>
           <p>Michael, I like the sound of your voice. You know what I'm going to do? I'm going to buy one million
             dollars worth of paper products today.</p>
           <ul>
@@ -100,10 +105,10 @@
       </section>
       <section class="about">
         <div class="large-image">
-          <img src="images/avatar-2.webp" alt="TODO" />
+          <img src="images/avatar-2.webp" alt="TODO" width="320" height="180" />
         </div>
         <div class="content">
-          <h6>Assistant <span>(to the)</span> Regional Manager</h6>
+          <h3>Assistant <span>(to the)</span> Regional Manager</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit nostrum voluptatum eaque delectus
             distinctio ipsam ut voluptates placeat iste excepturi quas quia, aperiam, praesentium culpa nam earum fuga.
           </p>
@@ -114,16 +119,16 @@
         </div>
       </section>
       <section class="portfolio">
-        <h6>Portfolio</h6>
+        <h4>Portfolio</h4>
         <div class="photos">
-          <img src="images/portfolio-1.webp" alt="TODO" />
-          <img src="images/portfolio-2.webp" alt="TODO" />
-          <img src="images/portfolio-3.webp" alt="TODO" />
-          <img src="images/portfolio-4.webp" alt="TODO" />
+          <img src="images/portfolio-1.webp" alt="TODO" width="320" height="180" />
+          <img src="images/portfolio-2.webp" alt="TODO" width="320" height="180" />
+          <img src="images/portfolio-3.webp" alt="TODO" width="320" height="180" />
+          <img src="images/portfolio-4.webp" alt="TODO" width="320" height="180" />
         </div>
       </section>
       <section class="contact">
-        <h6>Get In Touch</h6>
+        <h5>Get In Touch</h5>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9425.875878213677!2d-1.5567844567415559!3d53.79893835302731!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48795c1e046c24a9%3A0x716fc89a6553a7e4!2sLeeds%20City%20Centre%2C%20Leeds!5e0!3m2!1sen!2suk!4v1623002048367!5m2!1sen!2suk"
           height="300" style="border:0;" allowfullscreen="" loading="lazy" class="map"></iframe>
@@ -138,19 +143,19 @@
           <button>Send Message</button>
         </form>
       </section>
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
     </main>
   </div>
 
