--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en-gb">
 
 <head>
@@ -8,11 +7,9 @@
   <meta name="robots" content="noimageindex, nofollow, nosnippet">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="app.css">
-  <meta name="description"
-    content="Dwight Schrewt is an entertainment producer and has worked on projects such as The Office, The Big Bang Theory, and Parks & Rec. Learn to create a portfolio page of your own using photos, videos, and more.">
-  <meta name="keywords" content="The office, portfolio, Dwight">
-  <meta name="author" content="Karl">
-
+  <meta name="theme-color" content="#f9da85">
+  <link rel="apple-touch-icon"
+    href="https://cdn.glitch.com/49d34dc6-8fbd-46bb-8221-b99ffd36f1af%2Ftouchicon-180.png?v=1566411949736">
 </head>
 
 <body>
@@ -29,12 +26,12 @@
       </ul>
 
       <p>&copy; 2022 Bill Buttlicker</p>
-      <a href="#" rel="noreferrer" class="author">@karlhadwen</a>
+      <a href="" rel="noreferrer" class="author">@karlhadwen</a>
     </nav>
     <main>
       <section class="home">
         <div class="avatar">
-          <img src="images/avatar.webp" alt="Dwight Schrewt" width="320" height="180" />
+          <img src="images/avatar.webp" alt="Dwight Schrewt" width="830" height="830" />
         </div>
         <div class="content">
           <h2>Who is Justice Beaver?</h2>
@@ -105,7 +102,7 @@
       </section>
       <section class="about">
         <div class="large-image">
-          <img src="images/avatar-2.webp" alt="TODO" width="320" height="180" />
+          <img src="images/avatar-2.webp" alt="TODO" width="830" height="830" />
         </div>
         <div class="content">
           <h3>Assistant <span>(to the)</span> Regional Manager</h3>
@@ -121,10 +118,10 @@
       <section class="portfolio">
         <h4>Portfolio</h4>
         <div class="photos">
-          <img src="images/portfolio-1.webp" alt="TODO" width="320" height="180" />
-          <img src="images/portfolio-2.webp" alt="TODO" width="320" height="180" />
-          <img src="images/portfolio-3.webp" alt="TODO" width="320" height="180" />
-          <img src="images/portfolio-4.webp" alt="TODO" width="320" height="180" />
+          <img src="images/portfolio-1.webp" alt="TODO" width="830" height="830" />
+          <img src="images/portfolio-2.webp" alt="TODO" width="830" height="830" />
+          <img src="images/portfolio-3.webp" alt="TODO" width="830" height="830" />
+          <img src="images/portfolio-4.webp" alt="TODO" width="830" height="830" />
         </div>
       </section>
       <section class="contact">
@@ -143,19 +140,19 @@
           <button>Send Message</button>
         </form>
       </section>
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="320" height="180" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
     </main>
   </div>
 
