--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en-gb">
 
 <head>
@@ -8,6 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="app.css">
   <meta name="theme-color" content="#f9da85">
+  <meta name="description"
+    content="Dwight Schrewt is an entertainment producer and has worked on projects such as The Office, The Big Bang Theory, and Parks & Rec. Learn to create a portfolio page of your own using photos, videos, and more.">
+  <meta name="keywords" content="portfolio, office, Dwight Schrewt">
   <link rel="apple-touch-icon"
     href="https://cdn.glitch.com/49d34dc6-8fbd-46bb-8221-b99ffd36f1af%2Ftouchicon-180.png?v=1566411949736">
 </head>
@@ -26,12 +30,12 @@
       </ul>
 
       <p>&copy; 2022 Bill Buttlicker</p>
-      <a href="" rel="noreferrer" class="author">@karlhadwen</a>
+      <a href="#" rel="noreferrer" class="author">@karlhadwen</a>
     </nav>
     <main>
       <section class="home">
         <div class="avatar">
-          <img src="images/avatar.webp" alt="Dwight Schrewt" width="830" height="830" />
+          <img src="images/avatar.webp" alt="Dwight Schrewt" width="854" height="480" />
         </div>
         <div class="content">
           <h2>Who is Justice Beaver?</h2>
@@ -102,7 +106,7 @@
       </section>
       <section class="about">
         <div class="large-image">
-          <img src="images/avatar-2.webp" alt="TODO" width="830" height="830" />
+          <img src="images/avatar-2.webp" alt="TODO" width="1024" height="683" />
         </div>
         <div class="content">
           <h3>Assistant <span>(to the)</span> Regional Manager</h3>
@@ -118,10 +122,10 @@
       <section class="portfolio">
         <h4>Portfolio</h4>
         <div class="photos">
-          <img src="images/portfolio-1.webp" alt="TODO" width="830" height="830" />
-          <img src="images/portfolio-2.webp" alt="TODO" width="830" height="830" />
-          <img src="images/portfolio-3.webp" alt="TODO" width="830" height="830" />
-          <img src="images/portfolio-4.webp" alt="TODO" width="830" height="830" />
+          <img src="images/portfolio-1.webp" alt="TODO" width="854" height="480" />
+          <img src="images/portfolio-2.webp" alt="TODO" width="854" height="480" />
+          <img src="images/portfolio-3.webp" alt="TODO" width="854" height="480" />
+          <img src="images/portfolio-4.webp" alt="TODO" width="854" height="480" />
         </div>
       </section>
       <section class="contact">
@@ -140,19 +144,19 @@
           <button>Send Message</button>
         </form>
       </section>
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
-      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="830" height="830" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="854" height="480" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="854" height="480" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="854" height="480" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="854" height="480" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="854" height="480" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="854" height="480" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="854" height="480" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="854" height="480" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="854" height="480" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="854" height="480" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="854" height="480" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="854" height="480" />
+      <img src="images/avatar.webp" style="display: none;" alt="TODO" width="854" height="480" />
     </main>
   </div>
 
