--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
       <section class="portfolio">
         <h4>Portfolio</h4>
         <div class="photos">
-          <img src="images/portfolio-1.webp" alt="TODO" width="854" height="480" />
-          <img src="images/portfolio-2.webp" alt="TODO" width="854" height="480" />
-          <img src="images/portfolio-3.webp" alt="TODO" width="854" height="480" />
-          <img src="images/portfolio-4.webp" alt="TODO" width="854" height="480" />
+          <img src="images/portfolio-1.webp" alt="TODO" width="830" height="830" />
+          <img src="images/portfolio-2.webp" alt="TODO" width="830" height="830" />
+          <img src="images/portfolio-3.webp" alt="TODO" width="830" height="830" />
+          <img src="images/portfolio-4.webp" alt="TODO" width="830" height="830" />
         </div>
       </section>
       <section class="contact">
@@ -162,14 +162,14 @@
 
 
 
-  <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
-    crossorigin="anonymous"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+    crossorigin="anonymous"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/big.js/2.3.0/big.js"
     integrity="sha512-Ks3yCjHK35UDCp8IinA57ilvp74EgCcFFO1SytfAb8ifDLjx9kR6WuQ3pB6T37Ez2B162adQc9nBMpFNSfjMZA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/big.js/2.3.0/big.js"
     integrity="sha512-Ks3yCjHK35UDCp8IinA57ilvp74EgCcFFO1SytfAb8ifDLjx9kR6WuQ3pB6T37Ez2B162adQc9nBMpFNSfjMZA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
 </body>
 
 </html>
