--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
       <div class="container">
         <a class="navbar-brand" href="#">ADD CUSTOM LOGO</a>
           <span class="navbar-text">
-            <div id="date"></div>
-            <div id="location"></div>
+            <div id="date">AA</div>
+            <div id="location">BB</div>
           </span>
         </div>
       </div>
     </nav>
     <main>
       <div class="container">
-
         <div class="row mb-3">
           <div class="col-sm-4 mb-3">
             <h1>Lorem ipsum dolor sit amet</h1>
@@ -59,6 +58,17 @@
         </div>
 
         <div class="row">
+          <div class="col mb-5">
+            <h2>Accredds</h2>
+            <div>
+              <a href="#credly">
+                <img src="./images/psm1.png" width="50px"/>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
           <div class="col mb-2">
             <h2>Art</h2>
             <div>
@@ -68,6 +78,13 @@
         </div>
       </div>
     </main>
+    <div id="alien-container" style="background-color: white; min-height: 500px;">
+
+      <img src="./images/image0.png" alt="img" width="80px" id="alien0" style="position:relative; transition: all 0.8s;" />
+      <img src="./images/image1.png" alt="img" width="80px" id="alien1" style="position:relative; transition: all 0.8s;" />
+      <img src="./images/image2.png" alt="img" width="80px" id="alien2" style="position:relative; transition: all 0.8s;" />
+
+    </div>
 
     <footer>
       <a href="https://github.com/mrsaxby" target="_blank">https://github.com/mrsaxby</a>
